[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/npc_actor_sprites/Nortubel/GANYAH NPC SPRITES.png" type="Texture" id=1]
[ext_resource path="res://src/npc_actors/nort npc/GanyahNPC.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/dialogue box test.PNG" type="Texture" id=3]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 187, 429 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 187, 0, 187, 429 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "MAINSTATE",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60.5, 127 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 171, 220 )

[node name="GanyahNPC" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 51 )
scale = Vector2( 0.72, 0.72 )
frames = SubResource( 2 )
animation = "MAINSTATE"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10.5, 78 )
shape = SubResource( 3 )

[node name="TalktoArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalktoArea"]
position = Vector2( -10, -16 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 480.0
margin_right = 1018.0
margin_bottom = 593.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Dialogue" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 4 )

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 452.0
margin_right = 77.0
margin_bottom = 476.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Name" type="Label" parent="CanvasLayer/NinePatchRect2"]
margin_left = 6.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Ganyah"

[connection signal="body_entered" from="TalktoArea" to="." method="_on_TalktoArea_body_entered"]
[connection signal="body_exited" from="TalktoArea" to="." method="_on_TalktoArea_body_exited"]
